Fix header z-index

--- a/src/style.css
+++ b/src/style.css
@@ -28,6 +28,7 @@ body {
   align-items: center;
   padding: 0 3rem;
   position: fixed;
+  z-index: 1;
 }
 .avatar {
   border-radius: 50%;
